--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 function menubutt()
 {           
-    var element = document.getElementById("myDIV");                                
+    var element = document.getElementById("menu");                                
     element.classList.toggle("menu-extended");
 }
 </script>
@@ -30,7 +30,7 @@ function menubutt()
  </div>
  
 
-  <div id="myDIV" class="menu">
+  <div id="menu" class="menu">
       hahahahaha
   </div>
 </body>
